--- a/qlthuvien/src/index.css
+++ b/qlthuvien/src/index.css
@@ -12,3 +12,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#card{
+  width: 18rem;
+  max-height: 360px;
+}
+
+#anhCarousel{
+  max-height: 500px;
+}
+
+
+
+#carouselExampleControls {
+  max-height: 500px;
+}
